--- a/index.html
+++ b/index.html
@@ -4,13 +4,104 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="box-1">
-      <img
-        src="https://images.unsplash.com/photo-1701077136756-3b8439292118?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-      />
-      <p>view project</p>
+    <div class="mainbox">
+      <div class="box">
+        <h1>Night Star</h1>
+        <span>No-Artist</span>
+      </div>
+      <div class="box1">
+        <ul>
+          <li>work</li>
+          <li>about</li>
+          <li>
+            <img
+              src="https://www.svgrepo.com/show/364604/instagram-logo-fill.svg"
+            />
+          </li>
+          <li>
+            <img
+              src="https://f.hubspotusercontent30.net/hubfs/2235233/blog-import/2020/20-08-Aug/sm-icons-facebook-logo.png"
+            />
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="container">
+      <div class="box-1" id="woman">
+        <img
+          src="https://images.unsplash.com/photo-1682695798522-6e208131916d?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+        <p>view project</p>
+      </div>
+      <div class="box-1" id="tower">
+        <img
+          src="https://images.unsplash.com/photo-1701086292958-f753f3bb5d27?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+        <p class="overlay">view project</p>
+      </div>
+      <div class="box-1" id="solitude">
+        <img
+          src="https://images.unsplash.com/photo-1689509294321-48b2964d3d22?q=80&w=1370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+        <p>view project</p>
+      </div>
+      <div class="box-1" id="young-girl">
+        <img
+          src="https://images.unsplash.com/photo-1700574979184-da204dd04079?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+        <p>view project</p>
+      </div>
+      <div class="box-1" id="childrens">
+        <img
+          src="https://images.unsplash.com/photo-1489942986787-cded4ecf962e?q=80&w=1473&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+        <p>view project</p>
+      </div>
+      <div class="box-1" id="exploring">
+        <img
+          src="https://images.unsplash.com/photo-1451471016731-e963a8588be8?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+        <p class="overlay">view project</p>
+      </div>
+      <div class="box-1" id="happiness">
+        <img
+          src="https://images.unsplash.com/photo-1542103627-154a9565ae45?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+        <p>view project</p>
+      </div>
+      <div class="box-1" id="desert">
+        <img
+          src="https://plus.unsplash.com/premium_photo-1700391547521-5e26c84792c6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNzB8fHxlbnwwfHx8fHw%3D"
+        />
+        <p>view project</p>
+      </div>
+      <div class="box-1" id="humanity">
+        <img
+          src="https://images.unsplash.com/photo-1509059852496-f3822ae057bf?q=80&w=1545&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+        <p class="overlay">view project</p>
+      </div>
+      <div class="box-1" id="kindness">
+        <img
+          src="https://images.unsplash.com/photo-1518398046578-8cca57782e17?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+        <p class="overlay">view project</p>
+      </div>
+      <div class="box-1" id="hungry">
+        <img
+          src="https://images.unsplash.com/photo-1526168637801-e9f490d6bc04?q=80&w=1373&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+        <p class="overlay">view project</p>
+      </div>
     </div>
   </body>
 </html>
