--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       </div>
       <div class="box1">
         <ul>
-          <li>work</li>
-          <li>about</li>
+          <li><a href="#">work</a></li>
+          <li><a href="#">about</a></li>
           <li>
             <img
               src="https://www.svgrepo.com/show/364604/instagram-logo-fill.svg"
