hamburg setup with js

--- a/index.html
+++ b/index.html
@@ -1,40 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="mainbox">
-      <div class="box">
-        <h1>Night Star</h1>
-        <span>No-Artist</span>
-      </div>
-      <div class="box1">
-        <ul>
-          <li><a href="#">work</a></li>
-          <li><a href="#">about</a></li>
-          <li>
-            <img
-              src="https://www.svgrepo.com/show/364604/instagram-logo-fill.svg"
+    <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+            <link
+              href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
+              rel="stylesheet"
             />
-          </li>
-          <li>
-            <img
-              src="https://f.hubspotusercontent30.net/hubfs/2235233/blog-import/2020/20-08-Aug/sm-icons-facebook-logo.png"
-            />
-          </li>
-        </ul>
-      </div>
-    </div>
+            <link rel="stylesheet" href="style.css">
+          </head>
+          
+            <div class="mainbox">
+              <div class="box">
+                <h1>Night Star</h1>
+                <span>No-Artist</span>
+              </div>
+              <div class="box1">
+                <ul>
+                  <li><a href="#">work</a></li>
+                  <li><a href="#">about</a></li>
+                  <li>
+                    <img
+                      src="https://www.svgrepo.com/show/364604/instagram-logo-fill.svg"
+                    />
+                  </li>
+                  <li>
+                    <img
+                      src="https://f.hubspotusercontent30.net/hubfs/2235233/blog-import/2020/20-08-Aug/sm-icons-facebook-logo.png"
+                    />
+                  </li>
+                </ul>
+              </div>
+            </div>
+        <div class="hamburg">
+              <div class="bar1"></div>
+              <div class="bar2"></div>
+              <div class="bar3"></div>
+            </div>
+            <div class="navbox">
+                <ul>
+                  <li><a href="#">work</a></li>
+                  <li><a href="#">about</a></li>
+                  <li>
+                    <img
+                      src="https://www.svgrepo.com/show/364604/instagram-logo-fill.svg"
+                    />
+                  </li>
+                  <li>
+                    <img
+                      src="https://f.hubspotusercontent30.net/hubfs/2235233/blog-import/2020/20-08-Aug/sm-icons-facebook-logo.png"
+                    />
+                  </li>
+                </ul>
+              </div>
+            </div>
+           
     <div class="container">
       <div class="box-1" id="woman">
         <img
@@ -103,5 +123,6 @@
         <p class="overlay">view project</p>
       </div>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
